jlua.ebnf
Chunk ::= Block eof

Block ::= { Stat } [ "return" [ ExpList ] [ ";" ] ]

Stat ::= ";" |
         "break" |
         "goto" ident |
         "::" ident "::" |
         "do" Block "end" | 
         "while" Exp "do" Block "end" |
         "repeat" Block "until" Exp |
         "if" Exp "then" Block { "elseif" Exp "then" Block } [ "else" Block] "end" |
         "for" ident ( "=" Exp "," Exp [ "," Exp ] "do" Block "end" |
                       { "," ident } "in" ExpList "do" Block "end") |
         "function" ident { "." ident } [ ":" ident ] FuncBody |
         "local" ( "function" ident FuncBody |
                   ident Attrib { "," ident Attrib } [ "=" ExpList ] ) |
         StatExp

Attrib ::= [ "<" ident ">" ]

# assignable if cur = "]" | ident
StatExp ::= ( "(" Exp ")" ( DeRef | FuncCall) | OopCallableLiteral OopFuncCall | ident ) { ( DeRef | FuncCall) }
            ( ###assignable### { "," OopValExp ###assignable### } "=" ExpList | ###not_assignable### )
OopValExp ::= OopCallableLiteral [ OopFuncCall { ( DeRef | FuncCall) } ] | ValExp
ValExp ::= ( "(" Exp ")" | ident ) { ( DeRef | FuncCall) }
DeRef ::= "[" Exp "]" | "." ident
FuncCall ::= [ ":" ident ] Args
OopFuncCall ::= ":" ident Args

ExpList ::= Exp { "," Exp }

Exp ::= BinOp1 { "or" BinOp1 }
BinOp1 ::= BinOp2 { "and" BinOp2 }
BinOp2 ::= BinOp3 { ( "<" | ">" | "<=" | ">=" | "~=" | "==" ) BinOp3 }
BinOp3 ::= BinOp4 { "|" BinOp4 }
BinOp4 ::= BinOp5 { "~" BinOp5 }
BinOp5 ::= BinOp6 { "&" BinOp6 }
BinOp6 ::= BinOp7 { ( "<<" | ">>" ) BinOp7 }
BinOp7 ::= BinOp8 { ".." BinOp8 }
BinOp8 ::= BinOp9 { ( "+" | "-" ) BinOp9 }
BinOp9 ::= UnOp { ( "*" | "/" | "//" | "%" ) UnOp }
UnOp ::= { "not" | "#" | "-" | "~" } BinOp10
BinOp10 ::= TermExp { "^" TermExp }
TermExp ::= "..." | "function" FuncBody | OopValExp
OopCallableLiteral ::= "nil" | "false" | "true" | numeral | literal_string | TableConstructor

FuncBody ::= "(" [ ParList ] ")" Block "end"

# LL2 required to decide loop break (break if ll1 == , and ll2 == "...")
ParList ::= "..." | ident { "," ident } [ "," "..." ]

Args ::= "(" [ ExpList ] ")" | literal_string | TableConstructor

TableConstructor ::= "{" ( FieldList | "}" )

# LL2 required to decide loop break (break if ll2 == "}")
FieldList ::= Field { FieldSep Field } [ FieldSep ] "}"

# LL2 required to decide between 2nd and 3rd option (1st if ll1 == "[", 2nd if ll2 == "=" else 3rd)
Field ::= "[" Exp "]" "=" Exp | ident "=" Exp | Exp

FieldSep ::= "," | ";"
